# yet-another-claude-code

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/: __init__.py  agent.py
src/cli/: __init__.py  app.py  renderer.py
src/middleware/: __init__.py  base.py  patch_tool_calls.py  prompt_caching.py  summarization.py
src/prompts/: __init__.py  system.py
src/schemas/: __init__.py  types.py
src/tools/: __init__.py  definitions.py  executor.py
